Add changeRespondentNotificationStatus